--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -32,7 +32,7 @@ jobs:
     runs-on: windows-latest
     steps:
     - uses: actions/checkout@v2
-    - uses: eine/setup-msys2@v0
+    - uses: msys2/setup-msys2@v0
       with:
         msystem: ${{ matrix.task.msys }}
         update: true
