--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,7 +14,8 @@ jobs:
       max-parallel: 3
       matrix:
         task: [ '', mcode, llvm, gcc ]
-    runs-on: ubuntu-latest
+        version: [ 18.04, 20.04 ]
+    runs-on: ubuntu-${{ matrix.version }}
     steps:
     - uses: actions/checkout@v2
     - uses: ./
