--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,7 +14,7 @@ jobs:
       max-parallel: 3
       matrix:
         task: [ '', mcode, llvm, gcc ]
-        version: [ 18.04, 20.04 ]
+        version: [ 18.04, 20.04, latest ]
     runs-on: ubuntu-${{ matrix.version }}
     steps:
     - uses: actions/checkout@v2
@@ -32,7 +32,8 @@ jobs:
           { msys: MINGW32, backend: mcode },
           { msys: MINGW64, backend: llvm }
         ]
-    runs-on: windows-latest
+        version: [ 2016, 2019, latest ]
+    runs-on: windows-${{ matrix.version }}
     steps:
     - uses: actions/checkout@v2
     - uses: msys2/setup-msys2@v2
